--- a/BASICA/index.html
+++ b/BASICA/index.html
@@ -14,6 +14,7 @@
     <meta name="author" content="">
 
     <title>UNAL GTN</title>
+	<title>holi</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
