--- a/BASICA/index.html
+++ b/BASICA/index.html
@@ -14,7 +14,6 @@
     <meta name="author" content="">
 
     <title>UNAL GTN</title>
-	<title>holi</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -94,8 +93,8 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="carousel-content centered">
-                                    <h2 class="animation animated-item-1">Welcome to BASICA! A Bootstrap3 Template</h2>
-                                    <p class="animation animated-item-2">Sed mattis enim in nulla blandit tincidunt. Phasellus vel sem convallis, mattis est id, interdum augue. Integer luctus massa in arcu euismod venenatis. </p>
+                                    <h2 class="animation animated-item-1">Welcome to JENKINS ! A Bootstrap3 Template</h2>
+                                    <p class="animation animated-item-2">Parrafito. </p>
                                 </div>
                             </div>
                         </div>
